--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"bits-ui": "^2.14.4",
 		"date-fns": "^4.1.0",
 		"idb": "^8.0.3",
 		"jspdf": "^3.0.4",
