--- a/package.json
+++ b/package.json
@@ -19,22 +19,21 @@
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/node": "^25.0.3",
-		"autoprefixer": "^10.4.23",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.13.1",
 		"eslint-plugin-unused-imports": "^4.3.0",
-		"postcss": "^8.5.6",
 		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.1",
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.18",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.51.0",
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.1.18",
 		"bits-ui": "^2.14.4",
 		"date-fns": "^4.1.0",
 		"idb": "^8.0.3",
